--- a/src/aruco_tracker/cfg/logitech_c270_calibration.yaml
+++ b/src/aruco_tracker/cfg/logitech_c270_calibration.yaml
@@ -1,38 +1,26 @@
-# Camera calibration for Logitech C270
-# These are DEFAULT values - YOU MUST CALIBRATE YOUR CAMERA!
-# Use: ros2 run camera_calibration cameracalibrator --size 8x6 --square 0.025 --ros-args -r image:=/camera_down/image_raw
-#
-# After calibration, replace this file with the generated calibration data
-
 image_width: 640
 image_height: 480
-camera_name: logitech_c270
+camera_name: narrow_stereo
 camera_matrix:
   rows: 3
   cols: 3
-  data: [
-    500.0, 0.0, 320.0,    # fx, 0, cx
-    0.0, 500.0, 240.0,    # 0, fy, cy
-    0.0, 0.0, 1.0         # 0, 0, 1
-  ]
+  data: [900.86918,   0.     , 349.32878,
+           0.     , 901.87886, 223.07418,
+           0.     ,   0.     ,   1.     ]
 distortion_model: plumb_bob
 distortion_coefficients:
   rows: 1
   cols: 5
-  data: [0.0, 0.0, 0.0, 0.0, 0.0]  # k1, k2, p1, p2, k3
+  data: [0.034830, -0.032383, -0.006220, 0.014091, 0.000000]
 rectification_matrix:
   rows: 3
   cols: 3
-  data: [
-    1.0, 0.0, 0.0,
-    0.0, 1.0, 0.0,
-    0.0, 0.0, 1.0
-  ]
+  data: [1., 0., 0.,
+         0., 1., 0.,
+         0., 0., 1.]
 projection_matrix:
   rows: 3
   cols: 4
-  data: [
-    500.0, 0.0, 320.0, 0.0,
-    0.0, 500.0, 240.0, 0.0,
-    0.0, 0.0, 1.0, 0.0
-  ]
+  data: [905.48764,   0.     , 354.55896,   0.     ,
+           0.     , 913.68103, 221.43462,   0.     ,
+           0.     ,   0.     ,   1.     ,   0.     ]
